<resources>
    <string name="app_name">Blood Bank</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_enter_name">Enter your name</string>
    <string name="string_choose_username">Choose your username</string>
    <string name="string_choose_password">Choose your password</string>
    <string name="string_enter_bloodgroup">Enter your bloodgroup</string>
    <string name="string_enter_contact">Enter your contact</string>
    <string name="string_choose_area">Choose your area</string>
    <string name="string_choose_address">Choose your address</string>
    <string name="string_enter_nationalidnumber">Enter your nationalidnumber</string>
    <string name="button_register">Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps1">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_maps3">Map</string>
    <string name="title_activity_maps4">Map</string>
    <string name="title_activity_maps5">Map</string>
    <string name="title_activity_maps_activitylocation">Map</string>
</resources>
