<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:background="#ff2217"
        android:orientation="vertical"
        >

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"


        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="68dp"
            android:background="#ff2217"
            android:orientation="horizontal"
            android:layout_alignParentTop="true">




            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registration form"


                android:textColor = "#ffffff"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="7dp"
                android:textSize="30sp"
                android:textStyle="bold"

                android:layout_gravity="center_horizontal|center_vertical"/>



            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:gravity="right"
                android:orientation="horizontal" >

                <ImageView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    />

            </LinearLayout>
        </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:background="@drawable/greybackground"
        >

        <ImageView android:layout_width="360dp"
            android:layout_height="190dp"
            android:background="@drawable/b5"

            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"/>



        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_enter_name" />

    <EditText
        android:inputType="textMultiLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"


        android:id="@+id/editTextName"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_choose_username" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/editTextUserName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_choose_password" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:inputType="textPassword"
        android:id="@+id/editTextPassword" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_enter_bloodgroup" />

        <Spinner
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextBloodgroup"
            android:entries="@array/group"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_enter_contact" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"

        android:id="@+id/editContact"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/string_choose_area"

        />

        <Spinner
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editArea"
            android:entries="@array/quixote_characters"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_choose_address" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"

        android:id="@+id/editAddress" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_enter_nationalidnumber" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"

        android:id="@+id/editNationalidnumber" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:id="@+id/buttonRegister" />

    </LinearLayout>


           </LinearLayout>
    </LinearLayout>

</ScrollView>